{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 238,
  "lineage": "955ebf9e-e075-976c-09be-93ac532f1dde",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "exp-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/publicIPAddresses/expedition-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.122.150.68",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "expedition-ip",
            "resource_group_name": "Expedition-rg",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "exp-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/networkInterfaces/exp-nic",
            "internal_domain_name_suffix": "bpqfumrstbqenliwenzi3rmbzb.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/publicIPAddresses/expedition-ip",
                "subnet_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/virtualNetworks/expedition-network/subnets/expedition-subnet-1"
              }
            ],
            "location": "centralus",
            "mac_address": "00-22-48-48-A6-2E",
            "name": "exp-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "Expedition-rg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Compute/virtualMachines/exp-vm"
          },
          "dependencies": [
            "azurerm_public_ip.expedition-ip",
            "azurerm_resource_group.Expedition-rg",
            "azurerm_subnet.expedition-subnet-1",
            "azurerm_virtual_network.expedition-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "expedition-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/networkSecurityGroups/expedition-sg",
            "location": "centralus",
            "name": "expedition-sg",
            "resource_group_name": "Expedition-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "expedition-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "75.226.209.154",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Expedition-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "expedition-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/networkSecurityGroups/expedition-sg/securityRules/expedition-dev-rule",
            "name": "expedition-dev-rule",
            "network_security_group_name": "expedition-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Expedition-rg",
            "source_address_prefix": "75.226.209.154",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.expedition-sg",
            "azurerm_resource_group.Expedition-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "expedition-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/publicIPAddresses/expedition-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.122.150.68",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "expedition-ip",
            "resource_group_name": "Expedition-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Expedition-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "expedition-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/virtualNetworks/expedition-network/subnets/expedition-subnet-1",
            "name": "expedition-subnet-1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Expedition-rg",
            "virtual_network_name": "expedition-network"
          },
          "dependencies": [
            "azurerm_resource_group.Expedition-rg",
            "azurerm_virtual_network.expedition-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnetassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/virtualNetworks/expedition-network/subnets/expedition-subnet-1",
            "network_security_group_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/networkSecurityGroups/expedition-sg",
            "subnet_id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/virtualNetworks/expedition-network/subnets/expedition-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.expedition-sg",
            "azurerm_resource_group.Expedition-rg",
            "azurerm_subnet.expedition-subnet-1",
            "azurerm_virtual_network.expedition-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "expedition-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "325ae00b-9832-4660-ad16-23728ec581c9",
            "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/virtualNetworks/expedition-network",
            "location": "centralus",
            "name": "expedition-network",
            "resource_group_name": "Expedition-rg",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/virtualNetworks/expedition-network/subnets/expedition-subnet-1",
                "name": "expedition-subnet-1",
                "security_group": "/subscriptions/0f080122-8675-4fec-816d-734d9ea35737/resourceGroups/Expedition-rg/providers/Microsoft.Network/networkSecurityGroups/expedition-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Expedition-rg"
          ]
        }
      ]
    }
  ]
}